--- a/views/myPort.handlebars
+++ b/views/myPort.handlebars
@@ -26,6 +26,8 @@
 
                             <button>Email</button>
 
+                            <p>DESCRIÇÃO DO USER PARA DESCREVER COMO É SEUS PROJKETOS</p>
+
                             <div>
                                <div><span>Porjetos ativos</span> <span>10</span></div>
                                <div><span>Número total de visualizações</span> <span>10</span></div>
